fixed overflow issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,10 @@ a {
     color: #000;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 #mobile-nav {
     display: none;
 }
